Archive #garden and #garden-dev
This closes https://github.com/kubernetes/community/issues/7058. Garden has moved our community to Discord: we're unifying our channels so our community knows there's one place they can go for everything.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -125,7 +125,9 @@ channels:
   - name: fr-users
   - name: fury-distribution
   - name: garden
+    archived: true
   - name: garden-dev
+    archived: true
   - name: gardener
   - name: gimbal
   - name: github
