Promote CecileRobertMichon as SIG Cluster Lifecycle Lead
Signed-off-by: Vince Prignano <vincepri@redhat.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -988,6 +988,9 @@ sigs:
       name: Vince Prignano
       company: Red Hat
     tech_leads:
+    - github: CecileRobertMichon
+      name: Cecile Robert-Michon
+      company: Microsoft
     - github: fabriziopandini
       name: Fabrizio Pandini
       company: VMware
