SRC membership updates

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -56,8 +56,9 @@ usergroups:
       - joelsmith
       - lukehinds
       - micahhausler
+      - ritazh
+      - SaranBalaji90
       - tabbysable
-      - tallclair
 
   - name: velero-maintainers
     long_name: Velero Maintainers
