--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -1,8 +1,8 @@
 # This file contains an alphabetically sorted mapping of lowercase GitHub
 # usernames to Kubernetes Slack user IDs.
 users:
-  adisky: U9YRVLTEH
   adheipsingh: T09NY5SBT
+  adisky: U9YRVLTEH
   alejandrox1: U6AS37R50
   aleksandra-malinowska: U357LUPHS
   alexander-demicev: UR7UCR7RV
@@ -22,8 +22,8 @@ users:
   Bart Farrell: U01DZM7PJDT
   bart0sh: U8VJC20R3
   benjaminapetersen: U0217E7EXV4
-  bentheelder: U1P7T516X
   benoitf: UCQC3DNUA
+  bentheelder: U1P7T516X
   bhumijgupta: U022JUBM3B4
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
@@ -78,8 +78,8 @@ users:
   idealhack: U5NJ3DQM9
   idvoretskyi: U0CBHE6GM
   ilya-zuyev: U018UF2G42F
-  IsaacPD: U01B0C1R9NZ
   imran: U03K4862X7U
+  IsaacPD: U01B0C1R9NZ
   JamesLaverack: U9MK7274Y
   Jason: UB272379N
   jberkhahn: U7Q21LH2S
@@ -103,8 +103,8 @@ users:
   justaugustus: U0E0E78AK
   kadel: U0DE6E8JY
   kaslin: U5ENKU0AE
-  katharine: UBTBNJ6GL
   katcosgrove: U01GDERGEHF
+  katharine: UBTBNJ6GL
   kikisdeliveryservice: U9HFFRFT2
   kim-tsao: U02U1LDH4T1
   klihub: U9856A799
@@ -147,13 +147,13 @@ users:
   pabloschuhmacher: U01AAGZ06KU
   palnabarun: UBH9NTMBM
   paris: U5SB22BBQ
-  psaggu: U012EE74CU8
   pb82: U019M8295AQ
   pensu91: U44FHF81G
   phenixblue: UB4UVLEAK
   pnbrown: U011JJTQVGF
   pohly: U91901TMF
   prietyc123: U01D4MBLM52
+  psaggu: U012EE74CU8
   puerco: ULGHLJ7TP
   PurneswarPrasad: U027CFKVAB0
   pweil-: U0AL6882X
@@ -162,6 +162,7 @@ users:
   rashmigottipati: U013T1DD3PW
   reylejano: U01GDNJL5MW
   Rin Oliver: USF4LMDCN
+  ritazh: U5CMBA9RD
   rm3l: U034AQUV7PB
   rnapoles-rh: U01KDAMSWJD
   robshelly: U01LL4P09SR
@@ -169,6 +170,7 @@ users:
   s-urbaniak: U0DT660QM
   sammy: U8NJFL023
   sandipanpanda: U02A47HJ517
+  SaranBalaji90: U6PNPSULW
   saschagrunert: U53SUDBD4
   savitharaghunathan: UC8U2V3BM
   sayantani11: U028S6XNVSN
