--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3085,7 +3085,7 @@ workinggroups:
     frequency: biweekly
     url: https://zoom.us/j/98329676612?pwd=c0N2bVV1aTh2VzltckdXSitaZXBKQT09
     archive_url: https://docs.google.com/document/d/1XOeUN-K0aKmJJNq7H07r74n-mGgSFyiEDQ3ecwsGhec/edit
-    recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP05eEikq0j8PcSehEdM4mj7&jct=s4irZjLuvQ2WrUYAGxyRYjs3a2aysg
+    recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP1U1eU1NPyflIGmwzcXPsev
   contact:
     slack: wg-batch
     mailing_list: https://groups.google.com/a/kubernetes.io/g/wg-batch
