Setup bpfd slack channel
Signed-off-by: Andrew Stoycos <astoycos@redhat.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -30,6 +30,7 @@ channels:
   - name: bindings-discuss
   - name: bootkube
     archived: true
+  - name: bpfd
   - name: brigade
   - name: camptocamp-devops-stack
   - name: canonical-kubernetes
