Add sig-auth-authenticators-dev slack channel
For discussion around new authentication features such as https://kep.k8s.io/3331

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -403,6 +403,7 @@ channels:
   - name: sig-api-machinery-cel-dev
   - name: sig-apps
   - name: sig-auth
+  - name: sig-auth-authenticators-dev
   - name: sig-auth-kms-dev
   - name: sig-auth-triage
   - name: sig-autoscaling
