Add kubernetes-docs-bg slack channel

--- a/communication/slack-config/sig-docs/docs-channels.yaml
+++ b/communication/slack-config/sig-docs/docs-channels.yaml
@@ -1,5 +1,6 @@
 channels:
   - name: kubernetes-docs-ar
+  - name: kubernetes-docs-bg
   - name: kubernetes-docs-bn
     id: CQ0TD298C
   - name: kubernetes-docs-de
