slack: add usergroup for Kubernetes GitHub Admins
Signed-off-by: Nabarun Pal <pal.nabarun95@gmail.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -281,3 +281,14 @@ usergroups:
       - stevekuznetsov
       - sttts
       - vincepri
+
+  - name: github-admins
+    long_name: Kubernetes GitHub Admins
+    description: Administrators of the Kubernetes GitHub organisations
+    members:
+      - ameukam
+      - cblecker
+      - idvoretskyi
+      - mrbobbytables
+      - nikhita
+      - palnabarun
