--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2572,6 +2572,12 @@ sigs:
       slack: sig-security-tooling
     owners:
     - https://raw.githubusercontent.com/kubernetes/sig-security/main/sig-security-tooling/OWNERS
+  - name: security-assessments
+    description: Security self assessments for upstream projects
+    contact:
+      slack: sig-security-assessments
+    owners:
+    - https://raw.githubusercontent.com/kubernetes/sig-security/main/sig-security-assessments/OWNERS  
   - name: sig-security
     description: SIG Security discussions, documents, processes and other artifacts
     contact:
