Add Self Assessments as a subproject to SIG Security (#7221)
* Update sigs.yaml

Adding Self Assessments as a subproject to SIG Security

* run make

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2556,6 +2556,12 @@ sigs:
       github: cpanato
       name: Carlos Tadeu Panato Jr.
   subprojects:
+  - name: security-assessments
+    description: Security self assessments for upstream projects
+    contact:
+      slack: sig-security-assessments
+    owners:
+    - https://raw.githubusercontent.com/kubernetes/sig-security/main/sig-security-assessments/OWNERS
   - name: security-audit
     description: Third Party Security Audit
     owners:
