--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -2,6 +2,7 @@
 # usernames to Kubernetes Slack user IDs.
 users:
   adheipsingh: T09NY5SBT
+  adilGhaffarDev: U038BLZPX1S
   adisky: U9YRVLTEH
   alejandrox1: U6AS37R50
   aleksandra-malinowska: U357LUPHS
@@ -35,6 +36,8 @@ users:
   cdrage: U2TU9NPH9
   CecileRobertMichon: U98JPHB2M
   cfryanr: U0188B6J42H
+  chiukapoor: U045T4QQUE6
+  chrischdi: UBVL9Q4TB
   chrisshort: U2YGXSD9B
   cici37: UTY5J12L9
   CIPHERTron: U024FK4NLAH
@@ -61,6 +64,7 @@ users:
   feiskyer: U0ASA4398
   feloy: UFG7CN85U
   furkatgofurov7: UV31DL3CG
+  g-gaston: U01SS3GFELV
   gianarb: U0FSCELCR
   girishramnani: U9M4K75EU
   gracenng: U01GX18N6H3
@@ -96,6 +100,7 @@ users:
   Joel Barker: U014AHSTBPA
   joelanford: U1R6NQD8W
   joelsmith: U5SLG8T8F
+  johannesfrey: U7GFDAF8A
   johnbelamaric: U246A1A0N
   johnmcollier: UCVS4TNMQ
   jonasrosland: U0A4G34S2
@@ -106,6 +111,7 @@ users:
   katcosgrove: U01GDERGEHF
   katharine: UBTBNJ6GL
   kikisdeliveryservice: U9HFFRFT2
+  killianmuldoon: UGW727X6Z
   kim-tsao: U02U1LDH4T1
   klihub: U9856A799
   klueska: UF3ARH55Y
@@ -152,6 +158,7 @@ users:
   phenixblue: UB4UVLEAK
   pnbrown: U011JJTQVGF
   pohly: U91901TMF
+  prajyot-parab: U02MVRCN8CX
   prietyc123: U01D4MBLM52
   psaggu: U012EE74CU8
   puerco: ULGHLJ7TP
@@ -168,6 +175,7 @@ users:
   robshelly: U01LL4P09SR
   rtaniwa: U03K27HLHKN
   s-urbaniak: U0DT660QM
+  sadysnaat: UNQPKAQHE
   sammy: U8NJFL023
   sandipanpanda: U02A47HJ517
   SaranBalaji90: U6PNPSULW
@@ -193,6 +201,7 @@ users:
   tejal29: UACD7R316
   theishshah: U01891A4TRS
   thejoycekung: U01AY4VHX25
+  tobiasgiese: U01C1NM8D8F
   tpepper: U6UB5V4TX
   tstromberg: UCSL5SJ8Z
   Tunde: UAY977ENN
