--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3314,6 +3314,39 @@ workinggroups:
   contact:
     slack: wg-reliability
     mailing_list: https://groups.google.com/forum/#!forum/kubernetes-wg-reliability
+- dir: wg-sidecar
+  name: Sidecar
+  mission_statement: >
+    Make sidecar containers pattern built-in to Kubernetes to better support batch
+    workload, simplify development of sidecars and their reliability.
+
+  charter_link: charter.md
+  stakeholder_sigs:
+  - Apps
+  - Architecture
+  - Node
+  - Scheduling
+  label: sidecar
+  leadership:
+    chairs:
+    - github: SergeyKanzhelev
+      name: Sergey Kanzhelev
+      company: Google
+  meetings:
+  - description: Regular Meeting (at active stages)
+    day: Tuesday
+    time: "09:00"
+    tz: PT (Pacific Time)
+    frequency: weekly
+    url: https://zoom.us/j/4799874685
+    archive_url: https://docs.google.com/document/d/1E1guvFJ5KBQIGcjCrQqFywU9_cBQHRtHvjuqcVbCXvU/edit#heading=h.m8xoiv5t6qma
+    recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP1wJPj5DYWXjiArF-MJ5fNG
+  contact:
+    slack: sig-node
+    mailing_list: https://groups.google.com/forum/#!forum/kubernetes-sig-node
+    liaison:
+      github: TODO
+      name: TODO
 - dir: wg-structured-logging
   name: Structured Logging
   mission_statement: >
