add cluster-api-k3s to slack

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -62,6 +62,7 @@ channels:
     archived: true
   - name: cluster-api-gcp
   - name: cluster-api-ibmcloud
+  - name: cluster-api-k3s
   - name: cluster-api-kubemark
   - name: cluster-api-kubevirt
   - name: cluster-api-nested
