add vpc-lattice-k8-community to slack

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -24,6 +24,7 @@ channels:
   - name: awesome-kubernetes
   - name: aws-authenticator
   - name: aws-controllers-k8s
+  - name: aws-gateway-api-controller
   - name: aws-vpc-cni
   - name: azure-service-operator
   - name: bazel
