--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1331,10 +1331,22 @@ sigs:
     - github: jberkus
       name: Josh Berkus
       company: Red Hat
+    - github: kaslin
+      name: Kaslin Fields
+      company: Google
     - github: mrbobbytables
       name: Bob Killen
       company: Google
+    - github: palnabarun
+      name: Nabarun Pal
+      company: VMware
     tech_leads:
+    - github: MadhavJivrajani
+      name: Madhav Jivrajani
+      company: VMware
+    - github: Priyankasaggu11929
+      name: Priyanka Saggu
+      company: SUSE
     - github: cblecker
       name: Christoph Blecker
       company: Red Hat
