request to add kcp-edge-devs group
changes to ownership and strategy for kcp is requiring kcp-edge to change strategy and establish our own slack channel, mailing list, and etc.  We would like to continue working within the kubernetes ecosystem as we are expanding our support to work with a variety of different kubernetes distributions, not just kcp.

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -290,3 +290,13 @@ usergroups:
       - mrbobbytables
       - nikhita
       - palnabarun
+
+ - name: kcp-edge-devs
+    long_name: KCP-Edge Development Team
+    description: Active developers of KCP-Edge on #kcp-edge-dev
+    members:
+      - clubanderson
+      - mspreitz
+      - paolo
+      - ezra
+      
