request to add kcp-edge-dev channel
changes to the ownership of kcp have required the kcp-edge community to establish our own slack channel, mailing list, cicd, and other items that were once shared between kcp and kcp-edge.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -198,6 +198,7 @@ channels:
   - name: kapitan
   - name: kcp-dev
     id: C021U8WSAFK
+  - name: kcp-edge-dev
   - name: keda
   - name: keda-dev
   - name: keda-docs
