updated user names to match GH

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -296,7 +296,7 @@ usergroups:
     description: Active developers of KCP-Edge on #kcp-edge-dev
     members:
       - clubanderson
-      - mspreitz
-      - paolo
-      - ezra
+      - MikeSpreitzer
+      - ezrasilvera
+      - pdettori
       
