added users from kcp-edge-devs

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -43,6 +43,7 @@ users:
   CIPHERTron: U024FK4NLAH
   cjcullen: U0ALJAVMF
   cji: U5YSRC21J
+  clubanderson: U0462LN24QJ
   cpanato: U8DFY4TTK
   csams: U02B6A9GF55
   Dave Smith-Uchida: UDZDED8G2
@@ -60,6 +61,7 @@ users:
   enj: U2T4CVDTJ
   erismaster: U0162FJ79LY
   estroz: UKSEANEC9
+  ezrasilvera: U8UN4DC4T
   fabianvf: UAJ3UH29F
   feiskyer: U0ASA4398
   feloy: UFG7CN85U
@@ -134,6 +136,7 @@ users:
   microwavables: UAF606ESE
   mik-dass: UCUULSG1W
   mike-hoang: U03PDV4LS1Z
+  MikeSpreitzer: U0E40F05R
   ming-qiu: U02JVSL5550
   mkorbi: UEBLUUA0P
   mohammedzee1000: U3PFFE8CD
@@ -154,6 +157,7 @@ users:
   palnabarun: UBH9NTMBM
   paris: U5SB22BBQ
   pb82: U019M8295AQ
+  pdettori: U01CGS609EY
   pensu91: U44FHF81G
   phenixblue: UB4UVLEAK
   pnbrown: U011JJTQVGF
