--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3518,6 +3518,9 @@ committees:
     - github: cjcullen
       name: CJ Cullen
       company: Google
+    - github: cji
+      name: Craig Ingram
+      company: Google
     - github: enj
       name: Mo Khan
       company: Microsoft
