Add kubectl-validate channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -250,6 +250,7 @@ channels:
   - name: kubebuilder
   - name: kubecon
   - name: kubectl-trace
+  - name: kubectl-validate
   - name: kubedb
   - name: kubeinit
   - name: kubekhan
