--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -198,7 +198,6 @@ channels:
   - name: kapitan
   - name: kcp-dev
     id: C021U8WSAFK
-  - name: kcp-edge-dev
   - name: keda
   - name: keda-dev
   - name: keda-docs
@@ -259,6 +258,7 @@ channels:
   - name: kubeone
   - name: kubepack
   - name: kubestack
+  - name: kubestellar-dev
   - name: kuberhealthy
   - name: kubernetes-arm
   - name: kubernetes-batch-jobs
