--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -291,9 +291,9 @@ usergroups:
       - nikhita
       - palnabarun
 
-  - name: kcp-edge-devs
-    long_name: KCP-Edge Development Team
-    description: Active developers of KCP-Edge on #kcp-edge-dev
+  - name: kubestellar-devs
+    long_name: KubeStellar Development Team
+    description: Active developers of KubeStellar on #kubestellar-dev
     members:
       - clubanderson
       - MikeSpreitzer
