--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -106,6 +106,7 @@ channels:
   - name: druid-operator
   - name: ebpf
   - name: eks
+  - name: eksctl
   - name: elastickube
   - name: elk-charts
     archived: true
