archive wg-reliability

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -516,6 +516,7 @@ channels:
     archived: true
   - name: wg-policy
   - name: wg-reliability
+    archived: true
   - name: wg-resource-mgmt
     archived: true
   - name: wg-structured-logging
