--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -61,7 +61,7 @@ users:
   enj: U2T4CVDTJ
   erismaster: U0162FJ79LY
   estroz: UKSEANEC9
-  ezrasilvera: U8UN4DC4T
+  ezra: U8UN4DC4T
   fabianvf: UAJ3UH29F
   feiskyer: U0ASA4398
   feloy: UFG7CN85U
@@ -136,7 +136,7 @@ users:
   microwavables: UAF606ESE
   mik-dass: UCUULSG1W
   mike-hoang: U03PDV4LS1Z
-  MikeSpreitzer: U0E40F05R
+  mspreitz: U0E40F05R
   ming-qiu: U02JVSL5550
   mkorbi: UEBLUUA0P
   mohammedzee1000: U3PFFE8CD
@@ -157,7 +157,7 @@ users:
   palnabarun: UBH9NTMBM
   paris: U5SB22BBQ
   pb82: U019M8295AQ
-  pdettori: U01CGS609EY
+  paolo: U01CGS609EY
   pensu91: U44FHF81G
   phenixblue: UB4UVLEAK
   pnbrown: U011JJTQVGF
