request to add kubestellar-dev channel (#7276)
* request to add kcp-edge-dev channel

changes to the ownership of kcp have required the kcp-edge community to establish our own slack channel, mailing list, cicd, and other items that were once shared between kcp and kcp-edge.

* Update channels.yaml

name has changed

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -260,6 +260,7 @@ channels:
   - name: kubeone
   - name: kubepack
   - name: kubestack
+  - name: kubestellar-dev
   - name: kuberhealthy
   - name: kubernetes-arm
   - name: kubernetes-batch-jobs
