--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -291,3 +291,13 @@ usergroups:
       - mrbobbytables
       - nikhita
       - palnabarun
+
+  - name: kubestellar-devs
+    long_name: KubeStellar Development Team
+    description: "Active developers of KubeStellar on #kubestellar-dev"
+    members:
+      - clubanderson
+      - mspreitz
+      - ezra
+      - paolo
+      
