Add cluster-api-openstack-mentoring channel
Signed-off-by: Stephen Finucane <stephenfin@redhat.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -71,6 +71,7 @@ channels:
   - name: cluster-api-nutanix
   - name: cluster-api-oci
   - name: cluster-api-openstack
+  - name: cluster-api-openstack-mentoring
   - name: cluster-api-operator
   - name: cluster-api-packet
   - name: cluster-api-vsphere
