Update release-team-leads slack group for 1.28 RT
Signed-off-by: Mark Rossetti <marosset@microsoft.com>

--- a/communication/slack-config/sig-release/usergroups.yaml
+++ b/communication/slack-config/sig-release/usergroups.yaml
@@ -49,17 +49,17 @@ usergroups:
       - sig-release
     members:
       - cpanato # SIG Release Technical Lead
-      - Heba # 1.27 RT Lead Shadow
-      - hosseinsalahi # 1.27 RT Lead Shadow
-      - JamesLaverack # 1.27 Emeritus Advisor
+      - gracenng # 1.28 RT Lead
+      - helayoty # 1.28 RT Lead Shadow
       - jeremyrickard # SIG Release Chair
       - justaugustus # SIG Release Chair
-      - katcosgrove # 1.27 RT Lead Shadow
+      - leonardpahlke # 1.28 Emeritus Adviser
+      - marosset # 1.28 RT Lead Shadow
+      - mickeyboxell # 1.28 RT Lead Shadow
+      - neoaggelos # 1.28 RT Lead Shadow
       - puerco # SIG Release Technical Lead
-      - psaggu # 1.27 RT Lead Shadow
       - saschagrunert # SIG Release Chair
       - Verolop # SIG Release Technical Lead
-      - Xander # 1.27 RT Lead
 
   # Should match SIG Release Leads at all times:
   # https://git.k8s.io/community/sig-release/README.md#leadership
