--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -77,6 +77,7 @@ users:
   hardys: UFMADFMS4
   hasheddan: ULLQEF30C
   Heba: UHE5TSU4W
+  helayoty: UHE5TSU4W
   hoegaarden: U7VA4RZS9
   hosseinsalahi: U7SR0QJP8
   hubertstefanski: U01941KQ2UT
@@ -128,11 +129,13 @@ users:
   margocrawf: U01FWP2K74J
   markyjackson-taulia: U19TKJ64E
   MarlonGamez: U016N1XK06R
+  marosset: ULAUQ1KFZ
   mattmoyer: U0DRP8H42
   maysunfaisal: U01DEHK2YUB
   mbbroberg: U18JTHMDY
   micahhausler: U1WJ1BZA5
   michael-valdron: U03LXKVS0SX
+  mickeyboxell: UH0K0EC6S
   microwavables: UAF606ESE
   mik-dass: UCUULSG1W
   mike-hoang: U03PDV4LS1Z
@@ -146,6 +149,7 @@ users:
   nate-double-u: U01AWL6BD62
   nawazkh: U03HJN1C81W
   ncdc: U0A4MJ62V
+  neoaggelos: U02GE88D3SQ
   nikhita: U2PQHGMLN
   nkubala: UA90QL2BE
   nrb: U7S597E00
