archive sig-usability
- move sig-usability to archive/
- remove entry from sigs.yaml
- remove entry from OWNERS_ALIASES
- archive slack channel

Signed-off-by: Nabarun Pal <pal.nabarun95@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -449,6 +449,7 @@ channels:
   # sig-testing channels are defined in sig-testing/
   - name: sig-ui
   - name: sig-usability
+    archived: true
   - name: sig-windows
   - name: sig-windows-leads
   - name: skaffold
