--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3215,13 +3215,19 @@ workinggroups:
 - dir: wg-lts
   name: LTS
   mission_statement: >
-    Define LTS
+    The working group is organized with the goal of developing a better understanding
+    of what "Long Term Support" might mean for Kubernetes, those who support  Kubernetes,
+    and end users. The working group will investigate changes the Kubernetes project
+    could make related this better understanding of what long term support might mean.
+    The working group will also determine the feasibility, benefits, **cost**, and
+    prerequisites  of any such changes.s
 
   stakeholder_sigs:
   - Architecture
   - Cluster Lifecycle
   - K8s Infra
   - Release
+  - Security
   - Testing
   label: lts
   leadership:
@@ -3246,7 +3252,7 @@ workinggroups:
     recordings_url: TBD
   contact:
     slack: wg-lts
-    mailing_list: https://groups.google.com/forum/#!forum/kubernetes-wg-lts
+    mailing_list: TBD
     liaison:
       github: TBD
       name: TBD
