Add sig-auth-authorizers-dev slack channel
Signed-off-by: Rita Zhang <rita.z.zhang@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -415,6 +415,7 @@ channels:
   - name: sig-apps
   - name: sig-auth
   - name: sig-auth-authenticators-dev
+  - name: sig-auth-authorizers-dev
   - name: sig-auth-kms-dev
   - name: sig-auth-triage
   - name: sig-autoscaling
