Apply code review comment
Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3218,9 +3218,9 @@ workinggroups:
     The working group is organized with the goal of developing a better understanding
     of what "Long Term Support" might mean for Kubernetes, those who support  Kubernetes,
     and end users. The working group will investigate changes the Kubernetes project
-    could make related this better understanding of what long term support might mean.
-    The working group will also determine the feasibility, benefits, **cost**, and
-    prerequisites  of any such changes.s
+    could make related to the better understanding of what long term support might
+    mean. The working group will also determine the feasibility, benefits, **cost**,
+    and prerequisites  of any such changes.
 
   stakeholder_sigs:
   - Architecture
