Add kuadrant channel & maintainer user group

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -235,6 +235,7 @@ channels:
   - name: krew
   - name: krex
   - name: krustlet
+  - name: kuadrant
   - name: kube-aws
   - name: kube-bind
   - name: kube-deploy
