Initial WG LTS Reformation (#7287)
* initial wg lts changes

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

* Rename long-term-support to lts

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

* Update wg-lts/charter.md

Co-authored-by: Rita Zhang <rita.z.zhang@gmail.com>

* Add annual report and regular working group updates to timeline

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

* Update to address comments

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

* Address review comments

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

* Apply code review comment

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

* Add sig security to charter

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

* Update sigs.yaml

Co-authored-by: Christoph Blecker <admin@toph.ca>

* Regenerate README after sigs.yaml update

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

---------

Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>
Co-authored-by: Rita Zhang <rita.z.zhang@gmail.com>
Co-authored-by: Christoph Blecker <admin@toph.ca>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3207,6 +3207,50 @@ workinggroups:
     liaison:
       github: cblecker
       name: Christoph Blecker
+- dir: wg-lts
+  name: LTS
+  mission_statement: >
+    The working group is organized with the goal of developing a better understanding
+    of what "Long Term Support" might mean for Kubernetes, those who support Kubernetes,
+    and end users. The working group will investigate changes the Kubernetes project
+    could make related to the better understanding of what long term support might
+    mean. The working group will also determine the feasibility, benefits, **cost**,
+    and prerequisites of any such changes.
+
+  stakeholder_sigs:
+  - Architecture
+  - Cluster Lifecycle
+  - K8s Infra
+  - Release
+  - Security
+  - Testing
+  label: lts
+  leadership:
+    chairs:
+    - github: jeremyrickard
+      name: Jeremy Rickard
+      company: Microsoft
+    - github: liggitt
+      name: Jordan Liggitt
+      company: Google
+    - github: micahhausler
+      name: Micah Hausler
+      company: Amazon
+  meetings:
+  - description: Regular WG Meeting
+    day: TBD
+    time: TBD
+    tz: PT (Pacific Time)
+    frequency: biweekly
+    url: TBD
+    archive_url: TBD
+    recordings_url: TBD
+  contact:
+    slack: wg-lts
+    mailing_list: TBD
+    liaison:
+      github: TBD
+      name: TBD
 - dir: wg-policy
   name: Policy
   mission_statement: >
