retire VMware UG and remove User Groups as an official K8s group type

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3330,42 +3330,7 @@ workinggroups:
     liaison:
       github: palnabarun
       name: Nabarun Pal
-usergroups:
-- dir: ug-vmware-users
-  name: VMware Users
-  mission_statement: >
-    The VMware User Group facilitates communication among Kubernetes users and contributors
-    on topics pertaining to running all conformant forms of Kubernetes on VMware infrastructure.
-
-  label: vmware-users
-  leadership:
-    chairs:
-    - github: cantbewong
-      name: Steve Wong
-      company: VMware
-    - github: mylesagray
-      name: Myles Gray
-      company: VMware
-    tech_leads:
-    - github: brysonshepherd
-      name: Bryson Shepherd
-      company: Walmart
-    - github: phenixblue
-      name: Joe Searcy
-      company: T-Mobile
-  meetings:
-  - description: Regular User Group Meeting
-    day: Thursday
-    time: "11:00"
-    tz: PT (Pacific Time)
-    frequency: monthly
-    url: https://docs.google.com/document/d/1ujpqj4hhcIBrSCK2qn6J1r--3QyD96rfDjXTZQ7n7Mw/edit
-  contact:
-    slack: ug-vmware
-    mailing_list: https://groups.google.com/forum/#!forum/kubernetes-ug-vmware
-    liaison:
-      github: tpepper
-      name: Tim Pepper
+usergroups: []
 committees:
 - dir: committee-code-of-conduct
   name: Code of Conduct
