Add cri-dockerd to channels.yaml

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -88,6 +88,7 @@ channels:
   - name: craft
   - name: crash-diagnostics
   - name: crd-installation
+  - name: cri-dockerd
   - name: crio
   - name: crossplane
   - name: csi-secrets-store #this channel is for secrets-store-csi-driver which is a subproject of sig-auth
