Update CAPI v1.6 RT usergroup members list
Signed-off-by: Furkat Gofurov <furkat.gofurov@suse.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -246,21 +246,20 @@ usergroups:
     description: Members of the Cluster API Release Team
     members:
       - adilGhaffarDev
-      - aniruddha2000
-      - CecileRobertMichon
+      - cahillsf
       - chiukapoor
-      - chrischdi
       - furkatgofurov7
       - g-gaston
       - hackeramitkumar
-      - joekr
-      - johannesfrey
-      - killianmuldoon
+      - kranurag7
+      - mjlshen
       - nawazkh
+      - nprokopic
       - prajyot-parab
-      - sadysnaat
-      - sbueringer
-      - tobiasgiese
+      - razashahid107
+      - Sunnatillo
+      - vincepri
+      - willie-yao
 
   - name: kcp-devs
     long_name: kcp Development Team
