[sig-node] mothball old scrub slack channel and create a fresh one for CI subgroup
Signed-off-by: Davanum Srinivas <davanum@gmail.com>

--- a/communication/slack-config/sig-node/config.yaml
+++ b/communication/slack-config/sig-node/config.yaml
@@ -1,6 +1,6 @@
 channels:
   - name: sig-node
-  - name: sig-node-bug-scrub
+  - name: sig-node-ci
   - name: sig-node-kmm
     id: C037RE58RED
   - name: sig-node-rkt
