--- a/elections/steering/documentation/template/election-template.yaml
+++ b/elections/steering/documentation/template/election-template.yaml
@@ -1,7 +1,9 @@
 ## RENAME THIS FILE TO election.yaml
 name: {{YEAR}} Steering Committee Election
 organization: Kubernetes
+# Start of day in UTC for opening: 2023-08-29 00:00:01
 start_datetime: {{DATETIME VOTING STARTS IN UTC}}
+# End of day Anywhere on Earth for closing. Write 2023-09-26 as: 2023-09-27 11:59:59
 end_datetime: {{DATETIME VOTING ENDS IN UTC}}
 no_winners: {{# BEING ELECTED}}
 allow_no_opinion: True
@@ -15,4 +17,5 @@ election_officers:
   - {{EO 3}}
 eligibility: Kubernetes Org members with {{NUM}} or more contributions in the last year can vote.  See [the election guide](https://github.com/kubernetes/community/tree/master/elections/steering/{{YEAR}})
 exception_description: Not all contributions are measured by DevStats.  If you have contributions that are not so measured, then please request an exception to allow you to vote via the Elekto application.
+# End of day Anywhere on Earth for closing. Write 2023-09-23 as: 2023-09-24 11:59:59
 exception_due: {{DATETIME 3-4 DAYS BEFORE VOTING ENDS}}
